# ros_packages

gps_driver_and_analysis/src/analysis-scripts/.ipynb_checkpoints/: data_parser_stationary-checkpoint.ipynb  data_parser_walking-checkpoint.ipynb
gps_driver_and_analysis/src/data/: stationary_data.bag  walking_data.bag
gps_driver_and_analysis/src/data/.ipynb_checkpoints/: data_parser-checkpoint.ipynb  data_parser_s-checkpoint.ipynb  data_parser_w-checkpoint.ipynb
gps_driver_and_analysis/src/data/stationary_data/: gps.csv
gps_driver_and_analysis/src/data/walking_data/: gps.csv
gps_driver_and_analysis/src/gps_driver/: package.xml
gps_driver_and_analysis/src/gps_driver/launch/: driver.launch
gps_driver_and_analysis/src/gps_driver/msg/: gps_msg.msg
gps_driver_and_analysis/src/gps_driver/python/: driver.py
imu_driver_and_analysis/src/analysis/: Allan_Variance.mat  analysis.m  ind_data_analysis.ipynb
imu_driver_and_analysis/src/imu_driver/: CMakeLists.txt  package.xml
imu_driver_and_analysis/src/imu_driver/launch/: driver.launch
imu_driver_and_analysis/src/imu_driver/msg/: imu_msg.msg
imu_driver_and_analysis/src/imu_driver/python/: driver.py
object_detection_pkg/: CMakeLists.txt  README.md  package.xml
object_detection_pkg/scripts/: obj_det_sub.py
object_detection_pkg/src/: webcam_pub.cpp
pkg_zero/: CMakeLists.txt  README.md  package.xml
pkg_zero/scripts/: add_two_ints_client.py  add_two_ints_server.py  listener.py  talker.py
pkg_zero/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  listener.cpp  talker.cpp
rtk_gps_driver_and_analysis/src/gps_driver/: CMakeLists.txt
rtk_gps_driver_and_analysis/src/gps_driver/analysis/: bad_stationary_analysis.ipynb  bad_walking_analysis.ipynb  good_stationary_analysis.ipynb  good_walking_analysis.ipynb  moving_bad_data_2022-10-06-15-51-25.bag  moving_good_data_2022-10-06-16-14-14.bag  stationary_bad_data_2022-10-06-15-37-46.bag  stationary_good_data_2022-10-06-16-02-30.bag
rtk_gps_driver_and_analysis/src/gps_driver/msg/: gps_msg.msg
rtk_gps_driver_and_analysis/src/gps_driver/python/: driver.py
(+2 files in other folders)
